Correção tamanho media querie

--- a/curriculum.html
+++ b/curriculum.html
@@ -75,10 +75,10 @@
       <b>Atividades</b>: Manutenção e instalação de computadores, implementação de sistemas para gestão comercial, manutenção e instalação em rede de dados e internet, desenvolvimento de sites para web; designer gráfico.</p>
 
       <p><b>Nova Garantia Ltda | Analista de Sistemas</b> | Julho/2007 – Março/2013</br>
-      <b>Atividades</b>: Manutenção a rede de dados e internet, telefonia PABX e VOIP, computadores, impressoras, servidores backups e procedimentos em sistemas internos.</p> 
+      <b>Atividades</b>: Manutenção a rede de dados e internet, telefonia PABX e VOIP, computadores, impressoras, servidores, backups e procedimentos em sistemas internos.</p> 
 
       <p><b>Garantia Serviços Ltda | Auxiliar de Escritório</b> | Janeiro/2002 – Novembro/2006<br>
-        <b>Atividades</b>: Orçamentos, manutenção de computadores, backups, manutenção a rede de dados e internet, impressoras e e procedimentos em sistemas internos.</p> 
+        <b>Atividades</b>: Orçamentos, manutenção de computadores, backups, manutenção a rede de dados e internet, impressoras e procedimentos em sistemas internos.</p> 
 
       <h4><i class="far fa-lightbulb"></i> Conhecimentos</h4> 
       <p class="mb-2" ><b>Nível Avançado:</b> Manutenção de computadores; Redes de dados e internet; Windows; Word; Excel; Power Point; Segurança digital.</p>
@@ -104,7 +104,7 @@
         </div>
         <div class="contatos">
             <p><i class="far fa-envelope"></i> <a href="mailto:dener.pa@gmail.com">dener.pa@gmail.com</a></p>
-            <p><i class="fas fa-mobile-alt"></i> <a href="tel:+55-091-98224-2901">091 98224-2901</a></p>
+            <p><i class="fas fa-mobile-alt"></i> <a href="tel:+55-091-98224-2901">(91) 98224-2901</a></p>
             <p><i class="fab fa-whatsapp"></i> <a href="https://wa.me/5591982242901" target="_blank"><u>Envie-me uma mensagem</u></a></p>
         </div>
         <div class="copyright">
