--- a/projetos.html
+++ b/projetos.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="../site/css/projetos.css">
+    <link rel="stylesheet" type="text/css" href="css/projetos.css">
     <title>Dener Silva - Portfólio</title>
 </head>
 <body>
-    <h1>Portfólio</h1>
+    <h1>Portfólio dos Projetos</h1>
     <div class="flex">
         <div class="container">
             <div class="box">
                 <div class="imgBx">
-                    <img src="../site/img/grid.jpg">
+                    <img src="img/grid.jpg">
                 </div>
                 <div class="content">
                     <h2>CSS Grid Layout</h2>
@@ -23,7 +23,7 @@
             </div>
             <div class="box">
                 <div class="imgBx">
-                    <img src="../site/img/flex.jpg">
+                    <img src="img/flex.jpg">
                 </div>
                 <div class="content">
                     <h2>Flexbox Grid</h2>
@@ -33,7 +33,7 @@
             </div>
             <div class="box">
                 <div class="imgBx">
-                    <img src="../site/img/media.jpg">
+                    <img src="img/media.jpg">
                 </div>
                 <div class="content">
                     <h2>Media Queries</h2>
@@ -43,7 +43,7 @@
             </div>
             <div class="box">
                 <div class="imgBx">
-                    <img src="../site/img/js.jpg">
+                    <img src="img/js.jpg">
                 </div>
                 <div class="content">
                     <h2>JavaScript</h2>
