Rodape do portfolio

--- a/curriculum.html
+++ b/curriculum.html
@@ -100,7 +100,7 @@
         </div>
         <div class="navegacao">
             <a href="index.html"><i class="fas fa-home"></i> <u>Home</u></a> | 
-            <a href="projetos.html"><i class="fas fa-project-diagram"></i> <u>Projetos</u></a>
+            <a href="projetos.html"><i class="fas fa-project-diagram"></i> <u>Portfólio</u></a>
         </div>
         <div class="contatos">
             <p><i class="far fa-envelope"></i> <a href="mailto:dener.pa@gmail.com">dener.pa@gmail.com</a></p>
