--- a/projetos.html
+++ b/projetos.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css/projetos.css">
     <title>Dener Silva - Portfólio</title>
+
+    <!-- Crossbrowser -->
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet"  type="text/css" href="css/fonts/css/all.css"> 
+
+    <!-- Folha de estilo do Portfólio -->
+    <link rel="stylesheet" type="text/css" href="css/projetos.css">
+
 </head>
 <body>
     <h1>Portfólio dos Projetos</h1>
+    <h3>Aqui estão meus projetos na apaixonante área de development front-end.</h3>
     <div class="flex">
         <div class="container">
             <div class="box">
@@ -53,5 +63,26 @@
             </div>
         </div>    
     </div>
+
+    <footer class="rodape">
+        <div class="social">
+            <a href="https://www.facebook.com/denerffsilva" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.linkedin.com/in/dener-silva/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/DenerSilva2017" target="_blank"><i class="fab fa-github-square"></i></a>
+        </div>
+        <div class="navegacao">
+            <a href="index.html"><i class="fas fa-home"></i> <u>Home</u></a> | 
+            <a href="curriculum.html"><i class="fas fa-outdent"></i> <u>Curriculum</u></a>
+        </div>
+        <div class="contatos">
+            <p><i class="far fa-envelope"></i> <a href="mailto:dener.pa@gmail.com">dener.pa@gmail.com</a></p>
+            <p><i class="fas fa-mobile-alt"></i> <a href="tel:+55-091-98224-2901">(91) 98224-2901</a></p>
+            <p><i class="fab fa-whatsapp"></i> <a href="https://wa.me/5591982242901" target="_blank"><u>Envie-me uma mensagem</u></a></p>
+        </div>
+        <div class="copyright">
+            <p>Copyright &copy; Dener Silva - Todos os direitos reservados.</p>
+        </div>
+    </footer>
+
 </body>
 </html>
