Adaptação media queries

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <p>Estou diariamente aperfeiçoando meus conhecimentos na área de desenvolvimento de Sistemas Web.<br>
         Adoto por hobby a prática de esportes. <br>
         Minha maior conquista, sem dúvida, a minha família.</p>
-
-        <div class="div02">
+<div class="container">
+        <div class="div-cv">
             <div class="curriculum">
                 <img src="img/imgcv.jpg" alt="Curriculum Vitae">
                 <div class="inner">
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </div>
-        <div class="div03">
+        <div class="div-pj">
             <div class="projetos">
                 <img src="img/imgprojeto.jpg" alt="Portfólio">
                 <div class="inner">
@@ -61,6 +61,7 @@
                 </div>
             </div>
         </div>
+</div>
     </section>
     
     <footer class="rodape">
