Correçãoo tamanho fonte rodap

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Fonte da google -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet">
 
     <!-- WOW -->
     <link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -33,35 +34,37 @@
         <div class="imgdener">
             <img src="img/denersilva.png" alt="Dener Silva">
         </div>
+        <div id="apresentacao">
         <p>Estou diariamente aperfeiçoando meus conhecimentos na área de desenvolvimento de Sistemas Web.<br>
         Adoto por hobby a prática de esportes. <br>
         Minha maior conquista, sem dúvida, a minha família.</p>
-<div class="container">
-        <div class="div-cv">
-            <div class="curriculum">
-                <img src="img/imgcv.jpg" alt="Curriculum Vitae">
-                <div class="inner">
-                    <h4>Meu Curriculum Vitae</h4>
-                    <p>Sou um profissional da área de TI, atualmente focado em desenvolvimento front-end.</p>
-                    <div class="botao wow fadeInRight" data-wow-duration="2s">
-                        <a href="curriculum.html"><button class="btn"> Acesse </button></a>
-                    </div>  
+        </div>
+        <div class="container">
+            <div class="div-cv">
+                <div class="curriculum">
+                    <img src="img/cv.jpg" alt="Curriculum Vitae">
+                    <div class="inner">
+                        <h4>Meu Curriculum Vitae</h4>
+                        <p>Sou um profissional da área de TI, atualmente focado em desenvolvimento front-end.</p>
+                        <div class="botao wow fadeInRight" data-wow-duration="2s">
+                            <a href="curriculum.html"><button class="btn"> Acesse </button></a>
+                        </div>  
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="div-pj">
-            <div class="projetos">
-                <img src="img/imgprojeto.jpg" alt="Portfólio">
-                <div class="inner">
-                    <h4>Meu Portfólio</h4>
-                    <p>Tenho desenvolvido projetos utilizando HTML5, CSS3 e JavaScript.</p>
-                    <div class="botao wow fadeInLeft" data-wow-duration="2s">
-                        <a href="projetos.html"><button class="btn"> Acesse </button></a>
+            <div class="div-pj">
+                <div class="projetos">
+                    <img src="img/portfolio.jpg" alt="Portfólio">
+                    <div class="inner">
+                        <h4>Meu Portfólio</h4>
+                        <p>Tenho desenvolvido projetos utilizando HTML5, CSS3 e JavaScript.</p>
+                        <div class="botao wow fadeInLeft" data-wow-duration="2s">
+                            <a href="projetos.html"><button class="btn"> Acesse </button></a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-</div>
     </section>
     
     <footer class="rodape">
