mudanca caminho imagem

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="div-cv">
                 <div class="curriculum">
-                    <img src="img/cv.jpg" alt="Curriculum Vitae">
+                    <img src="../site/img/cv.jpg" alt="Curriculum Vitae">
                     <div class="inner">
                         <h4>Meu Curriculum Vitae</h4>
                         <p>Sou um profissional da área de TI, atualmente focado em desenvolvimento front-end.</p>
@@ -54,7 +54,7 @@
             </div>
             <div class="div-pj">
                 <div class="projetos">
-                    <img src="img/portfolio.jpg" alt="Portfólio">
+                    <img src="../site/img/portfolio.jpg" alt="Portfólio">
                     <div class="inner">
                         <h4>Meu Portfólio</h4>
                         <p>Tenho desenvolvido projetos utilizando HTML5, CSS3 e JavaScript.</p>
