mudança de fonte

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="format-detection" content="telephone=no">
-    <meta name="keywords" content="desenvolvedor, developer, freelancer, front-end, web, frontend, html, css, javascript, mysql, sites, websites, belém, ananindeua, pará">
+    <meta name="keywords" content="dener silva, desenvolvedor, developer, freelancer, front-end, web, frontend, html, css, javascript, sites, websites, belém, ananindeua, pará">
     <link rel="icon" href="img/ds.jpg">
 
     <!-- Crossbrowser -->
@@ -34,7 +34,7 @@
         <div class="imgdener">
             <img src="img/denersilva.png" alt="Dener Silva">
         </div>
-        <div id="apresentacao">
+        <div class="apresentacao">
         <p>Estou diariamente aperfeiçoando meus conhecimentos na área de desenvolvimento de Sistemas Web.<br>
         Adoto por hobby a prática de esportes. <br>
         Minha maior conquista, sem dúvida, a minha família.</p>
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="div-cv">
                 <div class="curriculum">
-                    <img src="../site/img/cv.jpg" alt="Curriculum Vitae">
+                    <img src="img/cv.jpg" alt="Curriculum Vitae">
                     <div class="inner">
                         <h4>Meu Curriculum Vitae</h4>
                         <p>Sou um profissional da área de TI, atualmente focado em desenvolvimento front-end.</p>
@@ -54,7 +54,7 @@
             </div>
             <div class="div-pj">
                 <div class="projetos">
-                    <img src="../site/img/portfolio.jpg" alt="Portfólio">
+                    <img src="img/portfolio.jpg" alt="Portfólio">
                     <div class="inner">
                         <h4>Meu Portfólio</h4>
                         <p>Tenho desenvolvido projetos utilizando HTML5, CSS3 e JavaScript.</p>
