--- a/projetos.html
+++ b/projetos.html
@@ -28,7 +28,7 @@
                 <div class="content">
                     <h2>CSS Grid Layout</h2>
                     <p>É um método bi-dimensional para criação de layout CSS que oferece a possibilidade de "layoutar" itens da página com uso de linhas e colunas.</p>
-                    <a href="../site/projetos/gridlayout.html">Veja aqui</a>
+                    <a href="projetos/gridlayout.html">Veja aqui</a>
                 </div>
             </div>
             <div class="box">
@@ -38,7 +38,7 @@
                 <div class="content">
                     <h2>Flexbox Grid</h2>
                     <p>Foi projetado como um modelo de layout unidimensional, e como um método que poderia oferecer distribuição de espaço entre itens numa interface.</p>
-                    <a href="../site/projetos/flexboxgrid.html">Veja aqui</a>
+                    <a href="projetos/flexboxgrid.html">Veja aqui</a>
                 </div>
             </div>
             <div class="box">
@@ -48,7 +48,7 @@
                 <div class="content">
                     <h2>Media Queries</h2>
                     <p>Consiste de um media type e pelo menos uma expressão que limita o escopo das folhas de estilo usando media features, tal como largura, altura e cor.</p>
-                    <a href="../site/projetos/mediaquerie.html">Veja aqui</a>
+                    <a href="projetos/mediaquerie.html">Veja aqui</a>
                 </div>
             </div>
             <div class="box">
@@ -58,7 +58,7 @@
                 <div class="content">
                     <h2>JavaScript</h2>
                     <p>É uma linguagem de programação interpretada de alto nível, dinâmica, fracamente tipificada, prototype-based e multi-paradigma.</p>
-                    <a href="../site/projetos/javascript.html">Veja aqui</a>
+                    <a href="projetos/javascript.html">Veja aqui</a>
                 </div>
             </div>
         </div>    
