Troca img foto cv

--- a/curriculum.html
+++ b/curriculum.html
@@ -33,7 +33,7 @@
     <section class="section-cv">
       <div class="cabecalho">
         <div class="foto">
-          <img src="img/denersilva.png">
+          <img src="img/fotocv.png">
         </div>
         <div class="informacoes">
           <h3>Dener Francisco Ferreira da Silva</h3>
