--- a/curriculum.html
+++ b/curriculum.html
@@ -71,7 +71,7 @@
 
       <h4><i class="fas fa-briefcase"></i> Experiência Profissional</h4> 
       <p><b>Freelancer</b> | Março/2013 - Dias atuais<br>
-      <b>Atividades</b>: Manutenção e instalação de computadores, implementação de sistemas para gestão comercial, manutenção e instalação em rede de dados e internet, desenvolvimento de sites para web; designer gráfico.</p>
+      <b>Atividades</b>: Manutenção e instalação de computadores, implementação de sistemas para gestão comercial, manutenção e instalação em rede de dados e internet, desenvolvimento de sites para web e designer gráfico.</p>
 
       <p><b>Nova Garantia Ltda | Analista de Sistemas</b> | Julho/2007 – Março/2013</br>
       <b>Atividades</b>: Manutenção a rede de dados e internet, telefonia PABX e VOIP, computadores, impressoras, servidores, backups e procedimentos em sistemas internos.</p> 
