Adicionado link proj flexbox

--- a/projetos.html
+++ b/projetos.html
@@ -38,7 +38,7 @@
                 <div class="content">
                     <h2>Flexbox Grid</h2>
                     <p>Foi projetado como um modelo de layout unidimensional, e como um método que poderia oferecer distribuição de espaço entre itens numa interface.</p>
-                    <a href="projetos/flexboxgrid.html">Veja aqui</a>
+                    <a href="https://denersilva2017.github.io/Flexbox/" target="_blank">Veja aqui</a>
                 </div>
             </div>
             <div class="box">
