--- a/projetos/flexboxgrid.html
+++ b/projetos/flexboxgrid.html
@@ -5,9 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Flexbox Grid</title>
+
+    <!-- Folha de estilo do Flex Box Grid -->
+    <link rel="stylesheet" type="text/css" href="flexboxgrid.css">
 </head>
 <body>
     <h2>Página em construção</h2>
     <h3><a href="javascript:void(0)" onClick="history.go(-1); return false;">Voltar</a></h3>
+    <aside class="aside">
+        aside
+    </aside>
+    <div class="div01">
+        div01
+    </div>
+    <div class="div02">
+        div02
+    </div>
+    <section class="section">
+        section
+    </section>
+    <footer class="footer">
+        footer
+    </footer>
 </body>
 </html>
