--- a/curriculum.html
+++ b/curriculum.html
@@ -8,7 +8,7 @@
       <meta name="robots" content="index, follow">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta name="keywords" content="desenvolvedor, developer, freelancer, front-end, web, frontend, html, css, javascript, mysql, sites, websites, belém, ananindeua, pará">
-      <link rel="icon" href="img/ds.jpg">
+      <link rel="icon" href="../site/img/ds.jpg">
   
       <!-- Crossbrowser -->
       <link rel="stylesheet" type="text/css" href="css/reset.css">
