CSs Grid add pag

--- a/projetos.html
+++ b/projetos.html
@@ -29,7 +29,7 @@
                 <div class="content">
                     <h2>CSS Grid Layout</h2>
                     <p>É um método bi-dimensional para criação de layout CSS que oferece a possibilidade de "layoutar" itens da página com uso de linhas e colunas.</p>
-                    <a href="projetos/gridlayout.html">Veja aqui</a>
+                    <a href="https://denersilva2017.github.io/gridlayout/" target="_blank">Veja aqui</a>
                 </div>
             </div>
             <div class="box">
