Add link mediaqueries

--- a/projetos.html
+++ b/projetos.html
@@ -49,7 +49,7 @@
                 <div class="content">
                     <h2>Media Queries</h2>
                     <p>Consiste de um media type e pelo menos uma expressão que limita o escopo das folhas de estilo usando media features, tal como largura, altura e cor.</p>
-                    <a href="projetos/mediaquerie.html">Veja aqui</a>
+                    <a href="https://denersilva2017.github.io/mediaqueries/"  target="_blank">Veja aqui</a>
                 </div>
             </div>
             <div class="box">
