--- a/curriculum.html
+++ b/curriculum.html
@@ -46,7 +46,7 @@
         </div>
       </div>
 
-      <h4><i class="fas fa-bullseye"></i> Objetivo</h4>
+      <h4><i class="fas fa-bullseye"></i> Objetivo Profissional</h4>
       <p>Setor de informática ou administrativo</p>
       
       <h4><i class="fas fa-graduation-cap"></i> Formação Acadêmica</h4>
@@ -71,7 +71,7 @@
         </ul>
       </div>
 
-      <h4><i class="fas fa-briefcase"></i> Experiência Profissional</h4> 
+      <h4><i class="fas fa-briefcase"></i> Experiências Profissionais</h4> 
       <p><b>Freelancer</b> | Março/2013 - Dias atuais<br>
       <b>Atividades</b>: Manutenção e instalação de computadores, implementação de sistemas para gestão comercial, manutenção e instalação em rede de dados e internet, desenvolvimento de sites para web e designer gráfico.</p>
 
@@ -81,7 +81,7 @@
       <p><b>Garantia Serviços Ltda | Auxiliar de Escritório</b> | Janeiro/2002 – Novembro/2006<br>
         <b>Atividades</b>: Orçamentos, manutenção de computadores, backups, manutenção a rede de dados e internet, impressoras e procedimentos em sistemas internos.</p> 
 
-      <h4><i class="far fa-lightbulb"></i> Conhecimentos</h4> 
+      <h4><i class="far fa-lightbulb"></i> Conhecimentos Adicionais</h4> 
       <p class="mb-2" ><b>Nível Avançado:</b> Manutenção de computadores; Redes de dados e internet; Windows; Word; Excel; Power Point; Segurança digital.</p>
       <p class="mb-2"><b>Nível Intermediário:</b> JavaScript; CSS3 (Grid layout, Flexbox e Media query); HTML5; Bootstrap; Git; GitHub; Java SE; MySQL; Photoshop; Marketing Digital; Inglês (cursando nível técnico). </p> 
       <p><b>Nível Básico:</b> PHP; Python; Linux; Corel Draw; Logística.</p>
