--- a/curriculum.html
+++ b/curriculum.html
@@ -50,10 +50,10 @@
       <p>Setor de informática ou administrativo</p>
       
       <h4><i class="fas fa-graduation-cap"></i> Formação Acadêmica</h4>
-      <p><b>Graduação - Tecnólogo em Análise e Desenvolvimento de Sistemas </b>| Fac. Estácio de Sá <br>
+      <p><b>Especialização em Desenvolvimento em Aplicações Web </b>| Faculdade UniBF <br>
+        Previsão de conclusão em Março de 2020</p>
+      <p><b>Graduação Tecnólógica em Análise e Desenvolvimento de Sistemas </b>| Fac. Estácio de Sá <br>
          Concluído em Junho de 2017</p>
-      <p><b>Pós-graduação - Desenvolvimento em Aplicações Web </b>| Faculdade UniBF <br>
-         Previsão de conclusão em Março de 2020</p>
 
       <h4><i class="fas fa-laptop-code"></i> Cursos de Aperfeiçoamento</h4>
       <p><b>CEV Treinamentos em Informática</b> | 2018/2019 (Certificados com carga de 40h cada).</p>
