--- a/curriculum.html
+++ b/curriculum.html
@@ -50,7 +50,7 @@
       <p>Setor de informática ou administrativo</p>
       
       <h4><i class="fas fa-graduation-cap"></i> Formação Acadêmica</h4>
-      <p><b>Especialização em Desenvolvimento em Aplicações Web </b>| Faculdade UniBF <br>
+      <p><b>Especialização em Desenvolvimento de Aplicações Web </b>| Faculdade UniBF <br>
         Previsão de conclusão em Março de 2020</p>
       <p><b>Graduação Tecnólógica em Análise e Desenvolvimento de Sistemas </b>| Fac. Estácio de Sá <br>
          Concluído em Junho de 2017</p>
