--- a/index.html
+++ b/index.html
@@ -87,7 +87,18 @@
         </div>
     </footer>
     <div class="copyright">
-        <p>Copyright &copy; Dener Silva - Todos os direitos reservados.</p>
+        <p>Copyright &copy; Dener Silva - Todos os direitos reservados. <br>
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px"
+                    src="https://jigsaw.w3.org/css-validator/images/vcss"
+                    alt="CSS válido!" />
+            </a> 
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px"
+                    src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+                    alt="CSS válido!" />
+            </a>
+        </p>
     </div>
 
     <!-- Script que carrega a saudação inicial do site -->
