--- a/curriculum.html
+++ b/curriculum.html
@@ -56,7 +56,10 @@
          Concluído em Junho de 2017</p>
 
       <h4><i class="fas fa-laptop-code"></i> Cursos de Aperfeiçoamento</h4>
-      <p><b>CEV Treinamentos em Informática</b> | 2018/2019 (Certificados com carga de 40h cada).</p>
+      <p><b>Udemy</b> | 2019/2020</p>
+      Cursando Desenvolvimento WEB com ES6, TypeScript e Angular 4
+
+      <p><b>CEV Treinamentos em Informática</b> | 2018/2019 (Certificados com carga de 40h cada)</p>
       <div class="lista">
         <ul>
           <li>Word 2016</li>
