--- a/curriculum.html
+++ b/curriculum.html
@@ -57,7 +57,7 @@
 
       <h4><i class="fas fa-laptop-code"></i> Cursos de Aperfeiçoamento</h4>
       <p><b>Udemy</b> | 2019/2020</p>
-      Cursando Desenvolvimento WEB com ES6, TypeScript e Angular 4
+      <p>Cursando Desenvolvimento WEB com ES6, TypeScript e Angular 4</p>
 
       <p><b>CEV Treinamentos em Informática</b> | 2018/2019 (Certificados com carga de 40h cada)</p>
       <div class="lista">
