--- a/curriculum.html
+++ b/curriculum.html
@@ -47,7 +47,7 @@
       </div>
 
       <h4><i class="fas fa-bullseye"></i> Objetivo Profissional</h4>
-      <p>Setor de informática ou administrativo</p>
+      <p>Atuar na área de tecnologia, projetos de desenvolvimento Web, front-end ou áres afins.</p>
       
       <h4><i class="fas fa-graduation-cap"></i> Formação Acadêmica</h4>
       <p><b>Especialização em Desenvolvimento de Aplicações Web </b>| Faculdade UniBF <br>
@@ -57,7 +57,7 @@
 
       <h4><i class="fas fa-laptop-code"></i> Cursos de Aperfeiçoamento</h4>
       <p><b>Udemy</b> | 2019/2020</p>
-      <p>Cursando Desenvolvimento WEB com ES6, TypeScript e Angular 4</p>
+      <p>Cursando Desenvolvimento WEB com Javascript ES6, TypeScript e Angular 4</p>
 
       <p><b>CEV Treinamentos em Informática</b> | 2018/2019 (Certificados com carga de 40h cada)</p>
       <div class="lista">
