--- a/curriculum.html
+++ b/curriculum.html
@@ -37,7 +37,7 @@
         </div>
         <div class="informacoes">
           <h3>Dener Francisco Ferreira da Silva</h3>
-          <p><i class="far fa-address-card"></i> Brasileiro, 37 anos, casado, CNH: A/B.<br>
+          <p><i class="far fa-address-card"></i> Brasileiro, 38 anos, casado.<br>
              <i class="fas fa-map-marker-alt"></i> Bairro do Coqueiro – Ananindeua/PA<br>
              <a href="http://www.linkedin.com/in/dener-silva" target="_blank"><i class="fab fa-linkedin"></i> www.linkedin.com/in/dener-silva</a></br>
              <a href="mailto:dener.pa@gmail.com?subject=" title=""><i class="far fa-envelope"></i> dener.pa@gmail.com</a></br>
@@ -51,16 +51,14 @@
       
       <h4><i class="fas fa-graduation-cap"></i> Formação Acadêmica</h4>
       <p><b>Especialização em Desenvolvimento de Aplicações Web </b>| Faculdade UniBF <br>
-        Previsão de conclusão em Março de 2020</p>
+        Previsão de conclusão em 04/2020</p>
       <p><b>Graduação Tecnológica em Análise e Desenvolvimento de Sistemas </b>| Fac. Estácio de Sá <br>
-         Concluído em Junho de 2017</p>
+         Concluído em 06/2017</p>
 
       <h4><i class="fas fa-laptop-code"></i> Cursos de Aperfeiçoamento</h4>
-      <p><b>Udemy</b> | 2019/2020</p>
-      <p>Cursando Desenvolvimento WEB com Javascript ES6, TypeScript e Angular 4</p>
-
-      <p><b>CEV Treinamentos em Informática</b> | 2018/2019 (Certificados com carga de 40h cada)</p>
-      <div class="lista">
+      <p>2019/2020 - Cursando Desenvolvimento WEB com Javascript ES6, TypeScript e Angular 4. </p>
+      <p>2018/2019 - Algoritmos, MySQL, HTML5, PHP, POO PHP, Java, POO Java, Python, GIT e GITHUB.</p>
+      <!--<div class="lista">
         <ul>
           <li>Word 2016</li>
           <li>Algoritmos</li>
@@ -71,26 +69,35 @@
           <li>Java</li>
           <li>POO Java</li>
           <li>Python</li>
-        </ul>
+        </ul> -->
       </div>
 
       <h4><i class="fas fa-briefcase"></i> Experiências Profissionais</h4> 
-      <p><b>Freelancer</b> | Março/2013 - Dias atuais<br>
-      <b>Atividades</b>: Manutenção e instalação de computadores, implementação de sistemas para gestão comercial, manutenção e instalação em rede de dados e internet, desenvolvimento de sites para web e designer gráfico.</p>
+      <p><b>Freelancer</b> | 03/2013 - Dias atuais<br>
+      <b>Atividades</b>: Manutenção e instalação de computadores.</p>
 
-      <p><b>Nova Garantia Ltda | Analista de Sistemas</b> | Julho/2007 – Março/2013</br>
-      <b>Atividades</b>: Manutenção a rede de dados e internet, telefonia PABX e VOIP, computadores, impressoras, servidores, backups e procedimentos em sistemas internos.</p> 
+      <p><b>Nova Garantia Ltda | Analista de Sistemas</b> | 07/2007 a 03/2013</br>
+      <b>Atividades</b>: Manutenção em rede de dados e internet, telefonia PABX e VOIP, computadores, servidores e backups.</p> 
 
-      <p><b>Garantia Serviços Ltda | Auxiliar de Escritório</b> | Janeiro/2002 – Novembro/2006<br>
-        <b>Atividades</b>: Orçamentos, manutenção de computadores, backups, manutenção a rede de dados e internet, impressoras e procedimentos em sistemas internos.</p> 
+      <p><b>Garantia Serviços Ltda | Auxiliar de Escritório</b> | 01/2002 a 11/2006<br>
+        <b>Atividades</b>: Serviços de informática, compras e orçamentos.</p> 
 
       <h4><i class="far fa-lightbulb"></i> Conhecimentos Adicionais</h4> 
+      <p>Nível Intermediário: Git, Node.js, NPM, TypeScript, Angular 4, JavaScript ES6, CSS3, Sass, HTML5 e Bootstrap.</p>
+
+      <h4><i class="fas fa-book-open"></i> Idioma </h4> 
+      <p>Nível Intermediário: Inglês.</p>
+      
+      <!--
       <p class="mb-2" ><b>Nível Avançado:</b> Manutenção de computadores; Redes de dados e internet; Windows; Word; Excel; Power Point; Segurança digital.</p>
       <p class="mb-2"><b>Nível Intermediário:</b> JavaScript; CSS3 (Grid layout, Flexbox e Media query); HTML5; Bootstrap; Git; GitHub; Java SE; MySQL; Photoshop; Marketing Digital; Inglês (cursando nível técnico). </p> 
       <p><b>Nível Básico:</b> PHP; Python; Linux; Corel Draw; Logística.</p>
-
+      -->
+      <!--
       <h4><i class="fas fa-project-diagram"></i> Projeto Atual</h4>
       <p>Desenvolvendo um site pessoal moderno, otimizado e responsivo, com HTML5, CSS3 e JavaScript.</p> 
+      -->
+
       <div class="btn-imprimir">
         <button onClick="window.print()"><i class="fas fa-print"></i> Imprimir</button>
       </div>
