--- a/curriculum.html
+++ b/curriculum.html
@@ -56,8 +56,9 @@
          Concluído em 06/2017</p>
 
       <h4><i class="fas fa-laptop-code"></i> Cursos de Aperfeiçoamento</h4>
+      <p>2020 - Hardware para Servidores; Infraestrutura de Rede; Cisco Packet Tracer; Adm. Windows Server 2008; Adm. Windows Server 2012; Adm. Windows Server 2016; Servidor Linux (Debian); Linux Ubuntu Server.</p>
       <p>2019/2020 - Cursando Desenvolvimento WEB com Javascript ES6, TypeScript e Angular 4. </p>
-      <p>2018/2019 - Algoritmos, MySQL, HTML5, PHP, POO PHP, Java, POO Java, Python, GIT e GITHUB.</p>
+      <p>2018/2019 - Algoritmos; Banco de dados com MySQL; HTML5; PHP; POO PHP; Java; POO Java; Python; Git e GitHub.</p>
       <!--<div class="lista">
         <ul>
           <li>Word 2016</li>
@@ -74,16 +75,17 @@
 
       <h4><i class="fas fa-briefcase"></i> Experiências Profissionais</h4> 
       <p><b>Freelancer</b> | 03/2013 - Dias atuais<br>
-      <b>Atividades</b>: Manutenção e instalação de computadores.</p>
+      <b>Atividades</b>: Suporte a serviços de informática: computadores, redes, sistemas, etc.</p>
 
       <p><b>Nova Garantia Ltda | Analista de Sistemas</b> | 07/2007 a 03/2013</br>
-      <b>Atividades</b>: Manutenção em rede de dados e internet, telefonia PABX e VOIP, computadores, servidores e backups.</p> 
+      <b>Atividades</b>: Suporte e manutenção a serviços de telefonia IP VoIP, servidores Windows e Linux, antivírus e serviços de rede (gerenciamento e armazenamento de arquivos, clonagem, autenticação, pool de impressão, FTP, VPN, VNC, virtualização, log, inventário de hardware e software, firewall, proxy, DHCP, monitoramento, backup/restore).</p> 
 
       <p><b>Garantia Serviços Ltda | Auxiliar de Escritório</b> | 01/2002 a 11/2006<br>
         <b>Atividades</b>: Serviços de informática, compras e orçamentos.</p> 
 
       <h4><i class="far fa-lightbulb"></i> Conhecimentos Adicionais</h4> 
-      <p>Nível Intermediário: Git, Node.js, NPM, TypeScript, Angular 4, JavaScript ES6, CSS3, Sass, HTML5 e Bootstrap.</p>
+      <p>Nível avançado: SO Windows e Linux; Pacote do Office (Word, Excel, Outlook e Power Point); Rede de dados e internet.</p>
+      <p>Nível Intermediário: Git; Node.js; NPM; TypeScript; Angular 9; Angular Material; JavaScript ES6; CSS3; Sass; HTML5 e Bootstrap.</p>
 
       <h4><i class="fas fa-book-open"></i> Idioma </h4> 
       <p>Nível Intermediário: Inglês.</p>
