--- a/curriculum.html
+++ b/curriculum.html
@@ -51,9 +51,9 @@
       
       <h4><i class="fas fa-graduation-cap"></i> Formação Acadêmica</h4>
       <p><b>Especialização em Desenvolvimento de Aplicações Web </b>| Faculdade UniBF <br>
-        Previsão de conclusão em 04/2020</p>
+        Previsão de conclusão em maio de 2020</p>
       <p><b>Graduação Tecnológica em Análise e Desenvolvimento de Sistemas </b>| Fac. Estácio de Sá <br>
-         Concluído em 06/2017</p>
+         Concluído em julho de 2017</p>
 
       <h4><i class="fas fa-laptop-code"></i> Cursos de Aperfeiçoamento</h4>
       <p>2020 - Hardware para Servidores; Infraestrutura de Rede; Cisco Packet Tracer; Adm. Windows Server 2008; Adm. Windows Server 2012; Adm. Windows Server 2016; Servidor Linux (Debian); Linux Ubuntu Server.</p>
