--- a/curriculum.html
+++ b/curriculum.html
@@ -78,7 +78,7 @@
       <b>Atividades</b>: Suporte a serviços de informática: computadores, redes, sistemas, etc.</p>
 
       <p><b>Nova Garantia Ltda | Analista de Sistemas</b> | 07/2007 a 03/2013</br>
-      <b>Atividades</b>: Suporte e manutenção a serviços de telefonia IP VoIP, servidores Windows e Linux, antivírus e serviços de rede (gerenciamento e armazenamento de arquivos, clonagem, autenticação, pool de impressão, FTP, VPN, VNC, virtualização, log, inventário de hardware e software, firewall, proxy, DHCP, monitoramento, backup/restore).</p> 
+      <b>Atividades</b>: Suporte e manutenção a serviços de telefonia IP VoIP, servidores Windows e Linux e antivírus da rede. Administração do Active Directory Domain Services (AD DS), além de outros serviços de rede como gerenciamento e armazenamento de arquivos, gerenciamento depolítica de grupo usuário, intranet, pool de impressão, FTP, VPN, VNC, virtualização, log, inventário de hardware e software, firewall, proxy, DHCP, monitoramento e backup/restore.</p> 
 
       <p><b>Garantia Serviços Ltda | Auxiliar de Escritório</b> | 01/2002 a 11/2006<br>
         <b>Atividades</b>: Serviços de informática, compras e orçamentos.</p> 
