--- a/curriculum.html
+++ b/curriculum.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
       <meta charset="UTF-8">
-      <title>Dener Silva - Curriculum</title>
+      <title>Dener Silva - Curriculum Vitae</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name= "author" content="Dener Silva">
       <meta name="robots" content="index, follow">
@@ -47,7 +47,7 @@
       </div>
 
       <h4><i class="fas fa-bullseye"></i> Objetivo Profissional</h4>
-      <p>Atuar na área de tecnologia, suporte, análise de redes, servidores, desenvolvimento de sites, projetos de desenvolvimento Web, front-end ou áreas afins.</p>
+      <p>Atuar na área de tecnologia, suporte, análise de redes, administrador de servidores, desenvolvimento de sites, projetos de desenvolvimento Web, front-end ou áreas afins.</p>
       
       <h4><i class="fas fa-graduation-cap"></i> Formação Acadêmica</h4>
       <p><b>Especialização em Desenvolvimento de Aplicações Web </b>| Faculdade UniBF <br>
