--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         </div>
         <div class="apresentacao">
         <p>Estou diariamente aperfeiçoando meus conhecimentos na área de desenvolvimento de Sistemas Web.<br>
-        Adoto por hobby a prática de esportes. <br>
-        Minha maior conquista, sem dúvida, a minha família.</p>
+        Atualmente criando alguns projetos em Angular 9, utilizando HTML5, CSS3, JavaScript e Angular Material.</p>
         </div>
         <div class="container">
             <div class="div-cv">
