--- a/curriculum.html
+++ b/curriculum.html
@@ -47,7 +47,7 @@
       </div>
 
       <h4><i class="fas fa-bullseye"></i> Objetivo Profissional</h4>
-      <p>Atuar na área de tecnologia, suporte, análise de redes, administrador de servidores, desenvolvimento de sites, projetos de desenvolvimento Web, front-end ou áreas afins.</p>
+      <p>Atuar na área de tecnologia: suporte, análise de redes, administração de servidores, desenvolvimento de sites, projetos de desenvolvimento Web, desenvolvimento front-end ou áreas afins.</p>
       
       <h4><i class="fas fa-graduation-cap"></i> Formação Acadêmica</h4>
       <p><b>Especialização em Desenvolvimento de Aplicações Web </b>| Faculdade UniBF <br>
